2004-04-20  Colin Marquardt  <colin@marquardt-home.de>

	* po/uk.po: Update.
	* po/en_GB.po: New English (British) translation, courtesy Gareth Owen.
	* configure.in: Add en_GB to ALL_LINGUAS.

2004-04-20  Marcus Meissner  <marcus@jet.franken.de>

	Patch by Darryl Sokoloski <darryl@k0r3dump.net>

	* gphoto2/main.c: Added 
		--frames=count
		--interval=seconds
	  capture sub options.

	  Cleaned up, corrected translations.

	* gphoto2/main.h: Increased option description length.

2004-03-23  Lutz Mueller <lutz@users.sourceforge.net>

	Patch by Michael Haardt <michael@moria.de>:

	* gphoto2/gphoto2-cmd-config.c: Allow ranges like 1.5 ... 5.5 with
	  increments of 1.

2004-03-22  Colin Marquardt  <colin@marquardt-home.de>

	* po/az.po: New Azerbaijani translation, courtesy Metin Amiroff.
	* po/sr.po: New Serbian translation, courtesy Aleksandar Jelenak.
	* configure.in: Add az and sr to ALL_LINGUAS.

2004-02-17  Christophe Barbe <christophe@ufies.org>

	* gphoto2/shell.c: Fixed shell_command_generator function
	  that was enough to only segfault on alpha.

2004-01-04  Christophe Barbe <christophe@ufies.org>

	Patch by Terran Melconian <terran@consistent.org>:

	* doc/gphoto2.1: The --camera option is silently ignored without the
	  --port option.

2003-12-11  Lutz Mueller <lutz@users.sourceforge.net>

	Patch by Andreas Burmester <a.burmester@hamburg.de>:

	* gphoto2/gp-params.c: Only use 79 columns so that the screen doesn't
	  get messed up on terminals with 80 columns and line wrap.

2003-12-09  Hubert Figuiere  <hfiguiere@teaser.fr>

	* configure.in: required version is 2.1.2 because of gp_library_version

2003-10-27  Lutz Mueller <lutz@users.sourceforge.net>

	* gphoto2/main.c: Make mkdir and rmdir do what they are supposed to
	  do. Reported by Marek Kassur <marco@bpmok.waw.pl>.

2003-10-14  Colin Marquardt  <colin@marquardt-home.de>

	* po/ro.po: New romanian translation courtesy Laurentiu Buzdugan.
	* configure.in: Add ro to ALL_LINGUAS.
